--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <packaging>war</packaging>
   <version>0.1</version>
   <name>hiring Maven Webapp</name>
-  <url>http://maven.apache.org</url>
+  <url>http://16.16.25.136:8081</url>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
