--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
   <packaging>war</packaging>
   <version>0.1</version>
   <name>hiring Maven Webapp</name>
-  <url>http://16.16.25.136:8081</url>
+  <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>17.0.17</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
