--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>in.javahome</groupId>
   <artifactId>hiring</artifactId>
   <packaging>war</packaging>
-  <version>3.0</version>
+  <version>3.0-SNAPSHOT</version>
   <name>hiring Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
